Half of tables generated.

--- a/src/transform/Transformation Index.ipynb
+++ b/src/transform/Transformation Index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,262 +114,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>alpha-2</th>\n",
-       "      <th>alpha-3</th>\n",
-       "      <th>country-code</th>\n",
-       "      <th>iso_3166-2</th>\n",
-       "      <th>region</th>\n",
-       "      <th>sub-region</th>\n",
-       "      <th>intermediate-region</th>\n",
-       "      <th>region-code</th>\n",
-       "      <th>sub-region-code</th>\n",
-       "      <th>intermediate-region-code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>AF</td>\n",
-       "      <td>AFG</td>\n",
-       "      <td>4</td>\n",
-       "      <td>ISO 3166-2:AF</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Southern Asia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ã…land Islands</td>\n",
-       "      <td>AX</td>\n",
-       "      <td>ALA</td>\n",
-       "      <td>248</td>\n",
-       "      <td>ISO 3166-2:AX</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Northern Europe</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>154.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>ALB</td>\n",
-       "      <td>8</td>\n",
-       "      <td>ISO 3166-2:AL</td>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Southern Europe</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>DZ</td>\n",
-       "      <td>DZA</td>\n",
-       "      <td>12</td>\n",
-       "      <td>ISO 3166-2:DZ</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Northern Africa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>American Samoa</td>\n",
-       "      <td>AS</td>\n",
-       "      <td>ASM</td>\n",
-       "      <td>16</td>\n",
-       "      <td>ISO 3166-2:AS</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>Polynesia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>Wallis and Futuna</td>\n",
-       "      <td>WF</td>\n",
-       "      <td>WLF</td>\n",
-       "      <td>876</td>\n",
-       "      <td>ISO 3166-2:WF</td>\n",
-       "      <td>Oceania</td>\n",
-       "      <td>Polynesia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>245</th>\n",
-       "      <td>Western Sahara</td>\n",
-       "      <td>EH</td>\n",
-       "      <td>ESH</td>\n",
-       "      <td>732</td>\n",
-       "      <td>ISO 3166-2:EH</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Northern Africa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>246</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>YE</td>\n",
-       "      <td>YEM</td>\n",
-       "      <td>887</td>\n",
-       "      <td>ISO 3166-2:YE</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Western Asia</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>142.0</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>ZM</td>\n",
-       "      <td>ZMB</td>\n",
-       "      <td>894</td>\n",
-       "      <td>ISO 3166-2:ZM</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Eastern Africa</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>ZW</td>\n",
-       "      <td>ZWE</td>\n",
-       "      <td>716</td>\n",
-       "      <td>ISO 3166-2:ZW</td>\n",
-       "      <td>Africa</td>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Eastern Africa</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>249 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  name alpha-2 alpha-3  country-code     iso_3166-2   region  \\\n",
-       "0          Afghanistan      AF     AFG             4  ISO 3166-2:AF     Asia   \n",
-       "1       Ã…land Islands      AX     ALA           248  ISO 3166-2:AX   Europe   \n",
-       "2              Albania      AL     ALB             8  ISO 3166-2:AL   Europe   \n",
-       "3              Algeria      DZ     DZA            12  ISO 3166-2:DZ   Africa   \n",
-       "4       American Samoa      AS     ASM            16  ISO 3166-2:AS  Oceania   \n",
-       "..                 ...     ...     ...           ...            ...      ...   \n",
-       "244  Wallis and Futuna      WF     WLF           876  ISO 3166-2:WF  Oceania   \n",
-       "245     Western Sahara      EH     ESH           732  ISO 3166-2:EH   Africa   \n",
-       "246              Yemen      YE     YEM           887  ISO 3166-2:YE     Asia   \n",
-       "247             Zambia      ZM     ZMB           894  ISO 3166-2:ZM   Africa   \n",
-       "248           Zimbabwe      ZW     ZWE           716  ISO 3166-2:ZW   Africa   \n",
-       "\n",
-       "             sub-region intermediate-region  region-code  sub-region-code  \\\n",
-       "0         Southern Asia                 NaN        142.0             34.0   \n",
-       "1       Northern Europe                 NaN        150.0            154.0   \n",
-       "2       Southern Europe                 NaN        150.0             39.0   \n",
-       "3       Northern Africa                 NaN          2.0             15.0   \n",
-       "4             Polynesia                 NaN          9.0             61.0   \n",
-       "..                  ...                 ...          ...              ...   \n",
-       "244           Polynesia                 NaN          9.0             61.0   \n",
-       "245     Northern Africa                 NaN          2.0             15.0   \n",
-       "246        Western Asia                 NaN        142.0            145.0   \n",
-       "247  Sub-Saharan Africa      Eastern Africa          2.0            202.0   \n",
-       "248  Sub-Saharan Africa      Eastern Africa          2.0            202.0   \n",
-       "\n",
-       "     intermediate-region-code  \n",
-       "0                         NaN  \n",
-       "1                         NaN  \n",
-       "2                         NaN  \n",
-       "3                         NaN  \n",
-       "4                         NaN  \n",
-       "..                        ...  \n",
-       "244                       NaN  \n",
-       "245                       NaN  \n",
-       "246                       NaN  \n",
-       "247                      14.0  \n",
-       "248                      14.0  \n",
-       "\n",
-       "[249 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 258,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "iso_codes"
+    "f = open('../repository/DUMP/ISO CODE.csv', 'r')\n",
+    "iso_codes = pd.read_csv(f)\n",
+    "iso_codes['id'] = pd.Series(range(len(iso_codes)), name='id')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv('../repository/DUMP/Trasnformation Index (2008-2022).csv', sep=';', index=False, encoding='utf-8')"
+    "df = df.merge(iso_codes.iloc[:, [-1, 0, 2]], left_on=\"Country\", right_on=\"name\")\n",
+    "df = df.drop(axis=1, columns=[\"Country\", \"name\", \"alpha-3\", \"Region\"])\n",
+    "df = df.rename(columns={\"id\": \"country_id\"})\n",
+    "df = df[[\"Year\", \"country_id\", *df.columns]]\n",
+    "df = df.loc[:, ~df.columns.duplicated()].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gov_col = [\n",
+    "    \"Free and fair elections\",\n",
+    "    \"Effective power to govern\",\n",
+    "    \"Separation of powers\",\n",
+    "    \"Independent judiciary\",\n",
+    "    \"Prosecution of office abuse\",\n",
+    "    \"Performance of democratic institutions\",\n",
+    "    \"Commitment to democratic institutions\",\n",
+    "    \"Level of Socioeconomic Development\",\n",
+    "    \"Socioeconomic barriers\",\n",
+    "    \"Monetary stability\",\n",
+    "    \"Fiscal stability\",\n",
+    "    \"Welfare Regime\",\n",
+    "    \"Social safety nets\",\n",
+    "    \"Equal opportunity\",\n",
+    "    \"Economic Performance\",\n",
+    "    \"Output strength\",\n",
+    "    \"Sustainability\",\n",
+    "    \"Environmental policy\",\n",
+    "    \"Education / R&D policy\",\n",
+    "    \"Level of Difficulty\",\n",
+    "    \"Structural constraints\",\n",
+    "    \"Conflict intensity\",\n",
+    "    \"GNI p.c. Atlas method rescaled\",\n",
+    "    \"UN Educ. Index rescaled\",\n",
+    "    \"BTI Stateness & Rule of Law\",\n",
+    "    \"Steering Capability\",\n",
+    "    \"Prioritization\",\n",
+    "    \"Implementation\",\n",
+    "    \"Policy learning\",\n",
+    "    \"Resource Efficiency\",\n",
+    "    \"Efficient use of assets\",\n",
+    "    \"Policy coordination\",\n",
+    "    \"Anti-corruption policy\",\n",
+    "    \"Consensus-Building\",\n",
+    "    \"Consensus on goals\",\n",
+    "    \"Anti-democratic actors\",\n",
+    "    \"Cleavage / conflict management\",\n",
+    "    \"Civil society participation\",\n",
+    "    \"Reconciliation\",\n",
+    "    \"International Cooperation\",\n",
+    "    \"Effective use of support\",\n",
+    "    \"Credibility\",\n",
+    "    \"Regional cooperation\",\n",
+    "]\n",
+    "\n",
+    "sg_col = df.columns.difference(gov_col, sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freedom = df.loc[:, ['Year', 'country_id', *gov_col]]\n",
+    "freedom = freedom\n",
+    "sg = df.loc[:, sg_col]\n",
+    "\n",
+    "freedom = freedom.rename(str.lower, axis=\"columns\")\n",
+    "freedom.columns = freedom.columns.str.replace(\" \", \"_\")\n",
+    "sg = sg.rename(str.lower, axis=\"columns\")\n",
+    "sg.columns = sg.columns.str.replace(\" \", \"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False)\n",
+    "sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False)"
    ]
   }
  ],
@@ -389,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
