Started working with polars

--- a/src/transform/Economic Freedom.ipynb
+++ b/src/transform/Economic Freedom.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "[533 rows x 65 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,12 +549,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "freedom.to_csv('../repository/DUMP/Economic Freedom/EF - Freedom.csv', sep=';', index=False)\n",
-    "sg.to_csv('../repository/DUMP/Economic Freedom/EF - State Governance.csv', sep=';', index=False)"
+    "sg['cost_of_worker_dismissal'] = sg['cost_of_worker_dismissal'].map(lambda x: x.replace(',', '.')).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "freedom.to_csv('../repository/DUMP/Economic Freedom/EF - Freedom.csv', sep=';', index=False, decimal='.')\n",
+    "sg.to_csv('../repository/DUMP/Economic Freedom/EF - State Governance.csv', sep=';', index=False, decimal='.')"
    ]
   }
  ],
