--- a/src/transform/Transformation Index.ipynb
+++ b/src/transform/Transformation Index.ipynb
@@ -213,8 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False)\n",
-    "sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False)"
+    "freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False, decimal='.')\n",
+    "sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False, decimal='.')"
    ]
   }
  ],
