--- a/src/transform/World Governance Index.ipynb
+++ b/src/transform/World Governance Index.ipynb
@@ -76,7 +76,7 @@
     "    ctgry = 'Freedom'\n",
     "    if not any(matches):\n",
     "        ctgry = 'State Governance'\n",
-    "    df.to_csv(f\"../repository/DUMP/WGI/{name.replace('.CSV', '')} - {ctgry}.csv\", sep=\";\", index=False)\n",
+    "    df.to_csv(f\"../repository/DUMP/WGI/{name.replace('.CSV', '')} - {ctgry}.csv\", sep=\";\", index=False, decimal='.')\n",
     "    "
    ]
   }
