--- a/src/transform/Doing Business.ipynb
+++ b/src/transform/Doing Business.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('../repository/DUMP/Doing Business/DB - Freedom.csv', sep=';', index=False)"
+    "df.to_csv('../repository/DUMP/Doing Business/DB - Freedom.csv', sep=';', index=False, decimal='.')"
    ]
   }
  ],
