SQL Ingestion configured.

--- a/src/transform/Economic Freedom.ipynb
+++ b/src/transform/Economic Freedom.ipynb
@@ -9,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '../repository')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import database\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re"
@@ -20,7 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = database.DatabaseConnection(db_name='economic-freedom').connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +515,7 @@
        "[533 rows x 65 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,11 +553,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "freedom = df.loc[:, ['Year', 'country_id', *gov_col]]\n",
+    "freedom = df.loc[:, [\"country_id\", \"Year\", *gov_col]]\n",
     "freedom = freedom\n",
     "sg = df.loc[:, sg_col]\n",
     "\n",
@@ -549,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,12 +578,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "533"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "freedom.to_csv('../repository/DUMP/Economic Freedom/EF - Freedom.csv', sep=';', index=False, decimal='.')\n",
-    "sg.to_csv('../repository/DUMP/Economic Freedom/EF - State Governance.csv', sep=';', index=False, decimal='.')"
+    "# freedom.to_csv('../repository/DUMP/Economic Freedom/EF - Freedom.csv', sep=';', index=False, decimal='.')\n",
+    "# sg.to_csv('../repository/DUMP/Economic Freedom/EF - State Governance.csv', sep=';', index=False, decimal='.')\n",
+    "\n",
+    "freedom.to_sql('freedom', con=conn, if_exists='replace', index_label='id')\n",
+    "sg.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')"
    ]
   }
  ],
@@ -583,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
