--- a/src/transform/Transformation Index.ipynb
+++ b/src/transform/Transformation Index.ipynb
@@ -9,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '../repository')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import database\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
@@ -23,7 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = database.DatabaseConnection(db_name='transformation-index').connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.merge(iso_codes.iloc[:, [-1, 0, 2]], left_on=\"Country\", right_on=\"name\")\n",
     "df = df.drop(axis=1, columns=[\"Country\", \"name\", \"alpha-3\", \"Region\"])\n",
     "df = df.rename(columns={\"id\": \"country_id\"})\n",
-    "df = df[[\"Year\", \"country_id\", *df.columns]]\n",
+    "df = df[[\"country_id\", \"Year\", *df.columns]]\n",
     "df = df.loc[:, ~df.columns.duplicated()].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,12 +229,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "360"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False, decimal='.')\n",
-    "sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False, decimal='.')"
+    "# freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False, decimal='.')\n",
+    "# sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False, decimal='.')\n",
+    "freedom.to_sql('freedom', con=conn, if_exists='replace', index_label='id')\n",
+    "sg.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')"
    ]
   }
  ],
@@ -234,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
