--- a/src/transform/Doing Business.ipynb
+++ b/src/transform/Doing Business.ipynb
@@ -9,10 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '../repository')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import database\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
@@ -21,7 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = database.DatabaseConnection(db_name='doing-bussiness').connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,25 +66,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.merge(iso_codes.iloc[:, [-1, 0, 2]], left_on=\"country_code\", right_on=\"alpha-3\")\n",
     "df = df.drop(axis=1, columns=[\"economy\", \"name\", \"alpha-3\", \"region\"])\n",
     "df = df.rename(columns={\"id\": \"country_id\", \"db_year\": \"year\"})\n",
-    "df = df[[\"year\", \"country_id\", *df.columns]]\n",
+    "df = df[[\"country_id\", \"year\", *df.columns]]\n",
     "df = df.drop(columns=[\"country_code\"])\n",
     "df = df.loc[:, ~df.columns.duplicated()].copy()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "59"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.to_csv('../repository/DUMP/Doing Business/DB - Freedom.csv', sep=';', index=False, decimal='.')"
+    "# df.to_csv('../repository/DUMP/Doing Business/DB - Freedom.csv', sep=';', index=False, decimal='.')\n",
+    "df.to_sql('freedom', con=conn, if_exists='replace', index_label='id')"
    ]
   }
  ],
@@ -84,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
