--- a/src/transform/Economic Freedom.ipynb
+++ b/src/transform/Economic Freedom.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "[533 rows x 65 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,12 +553,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "freedom = df.loc[:, [\"country_id\", \"Year\", *gov_col]]\n",
-    "freedom = freedom\n",
     "sg = df.loc[:, sg_col]\n",
     "\n",
     "freedom = freedom.rename(str.lower, axis=\"columns\")\n",
@@ -569,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +586,7 @@
        "533"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,8 +595,8 @@
     "# freedom.to_csv('../repository/DUMP/Economic Freedom/EF - Freedom.csv', sep=';', index=False, decimal='.')\n",
     "# sg.to_csv('../repository/DUMP/Economic Freedom/EF - State Governance.csv', sep=';', index=False, decimal='.')\n",
     "\n",
-    "freedom.to_sql('freedom', con=conn, if_exists='replace', index_label='id')\n",
-    "sg.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')"
+    "sg.to_sql('freedom', con=conn, if_exists='replace', index_label='id')\n",
+    "freedom.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')"
    ]
   }
  ],
@@ -617,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
