modified:   src/app/pages/civil_rights.py 	new file:   src/dags/civil_rights.py 	modified:   src/dags/sandbox.ipynb 	modified:   src/dags/taxes.py 	modified:   src/transform/Economic Freedom.ipynb 	modified:   src/transform/Transformation Index.ipynb 	modified:   src/transform/World Governance Index.ipynb

--- a/src/transform/Transformation Index.ipynb
+++ b/src/transform/Transformation Index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "360"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,8 +246,8 @@
    "source": [
     "# freedom.to_csv('../repository/DUMP/Transformation Index/TI - Freedom.csv', sep=';', index=False, decimal='.')\n",
     "# sg.to_csv('../repository/DUMP/Transformation Index/TI - State Governance.csv', sep=';', index=False, decimal='.')\n",
-    "freedom.to_sql('freedom', con=conn, if_exists='replace', index_label='id')\n",
-    "sg.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')"
+    "freedom.to_sql('state_governance', con=conn, if_exists='replace', index_label='id')\n",
+    "sg.to_sql('freedom', con=conn, if_exists='replace', index_label='id')"
    ]
   }
  ],
