--- a/src/transform/World Governance Index.ipynb
+++ b/src/transform/World Governance Index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,8 @@
     "    ctgry = 'Freedom'\n",
     "    if not any(matches):\n",
     "        ctgry = 'State Governance'\n",
-    "    # df.to_csv(f\"../repository/DUMP/WGI/{name.replace('.CSV', '')} - {ctgry}.csv\", sep=\";\", index=False, decimal='.')\n",
-    "    df.to_sql(name.split('-')[1].replace('.CSV', ''), con=conn, index_label='id')\n",
+    "    # df.to_csv(f\"../repository/DUMP/WGI/{name.replace('.CSV', '').strip()} - {ctgry}.csv\", sep=\";\", index=False, decimal='.')\n",
+    "    df.to_sql(name.split('-')[1].replace('.CSV', '').strip(), con=conn, index_label='id')\n",
     "    "
    ]
   }
